# jukebox

./: Cargo.toml  README.md
src/: main.rs
src/config/: construct.rs  mod.rs  operate.rs  read.rs
src/utils/: config.rs  flags.rs  mod.rs
src/utils/config/: construct.rs  mod.rs  operate.rs  read.rs  structure.rs
src/utils/flags/: get.rs  mod.rs  structure.rs
statics/: example.toml
