[package]
name = "jukebox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.5", features = ["derive"] }
dirs = "5.0.1"
lazy_static = "1.4.0"
log = "0.4.19"
serde = "1.0.164"
serde_derive = "1.0.164"
simple_logger = "4.2.0"
toml = "0.7.4"
